Pascal/test/cohadar/pascal/errors/undefined_variable.pas
program test;
var a: integer;

begin
	a := 2 + b;
end.